# backend/api/swagger/swagger.json
@@ -31,7 +31,6 @@
                 "tags": [
                     "Authentication"
                 ],
-                "summary": "Get user's logged-in devices",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -42,7 +41,7 @@
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/internal_transport_http_handlers.ErrorResponse"
+                            "$ref": "#/definitions/github_com_shenfay_go-ddd-scaffold_internal_transport_http_middleware.ErrorResponse"
                         }
                     }
                 }
@@ -82,13 +81,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/internal_transport_http_handlers.ErrorResponse"
+                            "$ref": "#/definitions/github_com_shenfay_go-ddd-scaffold_internal_transport_http_middleware.ErrorResponse"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/internal_transport_http_handlers.ErrorResponse"
+                            "$ref": "#/definitions/github_com_shenfay_go-ddd-scaffold_internal_transport_http_middleware.ErrorResponse"
                         }
                     }
                 }
@@ -121,25 +120,25 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/internal_transport_http_handlers.AuthResponse"
+                            "$ref": "#/definitions/github_com_shenfay_go-ddd-scaffold_internal_app_authentication.AuthResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/internal_transport_http_handlers.ErrorResponse"
+                            "$ref": "#/definitions/github_com_shenfay_go-ddd-scaffold_internal_transport_http_middleware.ErrorResponse"
                         }
                     },
                     "401": {
                         "description": "Invalid credentials",
                         "schema": {
-                            "$ref": "#/definitions/internal_transport_http_handlers.ErrorResponse"
+                            "$ref": "#/definitions/github_com_shenfay_go-ddd-scaffold_internal_transport_http_middleware.ErrorResponse"
                         }
                     },
                     "423": {
                         "description": "Account locked",
                         "schema": {
-                            "$ref": "#/definitions/internal_transport_http_handlers.ErrorResponse"
+                            "$ref": "#/definitions/github_com_shenfay_go-ddd-scaffold_internal_transport_http_middleware.ErrorResponse"
                         }
                     }
                 }
@@ -173,7 +172,7 @@
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/internal_transport_http_handlers.ErrorResponse"
+                            "$ref": "#/definitions/github_com_shenfay_go-ddd-scaffold_internal_transport_http_middleware.ErrorResponse"
                         }
                     }
                 }
@@ -204,7 +203,7 @@
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/internal_transport_http_handlers.ErrorResponse"
+                            "$ref": "#/definitions/github_com_shenfay_go-ddd-scaffold_internal_transport_http_middleware.ErrorResponse"
                         }
                     }
                 }
@@ -228,13 +227,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/internal_transport_http_handlers.UserResponse"
+                            "$ref": "#/definitions/github_com_shenfay_go-ddd-scaffold_internal_app_authentication.UserResponse"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/internal_transport_http_handlers.ErrorResponse"
+                            "$ref": "#/definitions/github_com_shenfay_go-ddd-scaffold_internal_transport_http_middleware.ErrorResponse"
                         }
                     }
                 }
@@ -267,19 +266,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/internal_transport_http_handlers.AuthResponse"
+                            "$ref": "#/definitions/github_com_shenfay_go-ddd-scaffold_internal_app_authentication.AuthResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/internal_transport_http_handlers.ErrorResponse"
+                            "$ref": "#/definitions/github_com_shenfay_go-ddd-scaffold_internal_transport_http_middleware.ErrorResponse"
                         }
                     },
                     "401": {
                         "description": "Invalid or expired token",
                         "schema": {
-                            "$ref": "#/definitions/internal_transport_http_handlers.ErrorResponse"
+                            "$ref": "#/definitions/github_com_shenfay_go-ddd-scaffold_internal_transport_http_middleware.ErrorResponse"
                         }
                     }
                 }
@@ -312,19 +311,19 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/internal_transport_http_handlers.AuthResponse"
+                            "$ref": "#/definitions/github_com_shenfay_go-ddd-scaffold_internal_app_authentication.AuthResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/internal_transport_http_handlers.ErrorResponse"
+                            "$ref": "#/definitions/github_com_shenfay_go-ddd-scaffold_internal_transport_http_middleware.ErrorResponse"
                         }
                     },
                     "409": {
                         "description": "Email already exists",
                         "schema": {
-                            "$ref": "#/definitions/internal_transport_http_handlers.ErrorResponse"
+                            "$ref": "#/definitions/github_com_shenfay_go-ddd-scaffold_internal_transport_http_middleware.ErrorResponse"
                         }
                     }
                 }
@@ -357,19 +356,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/internal_transport_http_handlers.UserResponse"
+                            "$ref": "#/definitions/github_com_shenfay_go-ddd-scaffold_internal_app_authentication.UserResponse"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/internal_transport_http_handlers.ErrorResponse"
+                            "$ref": "#/definitions/github_com_shenfay_go-ddd-scaffold_internal_transport_http_middleware.ErrorResponse"
                         }
                     },
                     "404": {
                         "description": "User not found",
                         "schema": {
-                            "$ref": "#/definitions/internal_transport_http_handlers.ErrorResponse"
+                            "$ref": "#/definitions/github_com_shenfay_go-ddd-scaffold_internal_transport_http_middleware.ErrorResponse"
                         }
                     }
                 }
@@ -377,7 +376,7 @@
         }
     },
     "definitions": {
-        "internal_transport_http_handlers.AuthResponse": {
+        "github_com_shenfay_go-ddd-scaffold_internal_app_authentication.AuthResponse": {
             "type": "object",
             "properties": {
                 "access_token": {
@@ -390,7 +389,47 @@
                     "type": "string"
                 },
                 "user": {
-                    "$ref": "#/definitions/internal_transport_http_handlers.UserResponse"
+                    "$ref": "#/definitions/github_com_shenfay_go-ddd-scaffold_internal_app_authentication.UserResponse"
+                }
+            }
+        },
+        "github_com_shenfay_go-ddd-scaffold_internal_app_authentication.UserResponse": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "email_verified": {
+                    "type": "boolean"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "last_login_at": {
+                    "type": "string"
+                }
+            }
+        },
+        "github_com_shenfay_go-ddd-scaffold_internal_transport_http_middleware.ErrorResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "details": {},
+                "message": {
+                    "type": "string"
+                },
+                "timestamp": {
+                    "description": "响应时间（RFC3339 格式）",
+                    "type": "string"
+                },
+                "trace_id": {
+                    "description": "链路追踪 ID（用于日志关联和分布式追踪）",
+                    "type": "string"
                 }
             }
         },
@@ -425,18 +464,6 @@
                     "items": {
                         "$ref": "#/definitions/internal_transport_http_handlers.DeviceResponse"
                     }
-                }
-            }
-        },
-        "internal_transport_http_handlers.ErrorResponse": {
-            "type": "object",
-            "properties": {
-                "code": {
-                    "type": "string"
-                },
-                "details": {},
-                "message": {
-                    "type": "string"
                 }
             }
         },
@@ -481,26 +508,6 @@
                     "type": "string",
                     "maxLength": 72,
                     "minLength": 8
-                }
-            }
-        },
-        "internal_transport_http_handlers.UserResponse": {
-            "type": "object",
-            "properties": {
-                "created_at": {
-                    "type": "string"
-                },
-                "email": {
-                    "type": "string"
-                },
-                "email_verified": {
-                    "type": "boolean"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "last_login_at": {
-                    "type": "string"
                 }
             }
         }
